--- a/chat-front/src/components/chat/chatList/ChatList.module.scss
+++ b/chat-front/src/components/chat/chatList/ChatList.module.scss
@@ -1,48 +1,7 @@
-.chat-list {
-    width: 30%;
-    background-color: #f5f5f5;
-    padding: 10px;
-  
-    input {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 10px;
-    }
-  
-    .chats {
-      display: flex;
-      flex-direction: column;
-    }
-  
-    .chat-item {
-      display: flex;
-      align-items: center;
-      padding: 10px;
-      border-bottom: 1px solid #ddd;
-  
-      .chat-avatar {
-        width: 40px;
-        height: 40px;
-        background-color: #ccc;
-        border-radius: 50%;
-        margin-right: 10px;
-      }
-  
-      .chat-info {
-        flex: 1;
-  
-        .chat-name {
-          font-weight: bold;
-        }
-  
-        .chat-last-message {
-          color: #666;
-        }
-      }
-  
-      .chat-date {
-        color: #999;
-      }
-    }
-  }
-  
+.chatList{
+  display: flex;
+  flex-direction: column;
+  width: 30vw;
+  height: 70%;
+  border-right:1px solid gray ;
+}
