updated logic for chat, created live-chat, implemented frontend for backend chat logic

--- a/chat-front/src/components/chat/chatList/ChatList.module.scss
+++ b/chat-front/src/components/chat/chatList/ChatList.module.scss
@@ -1,7 +1,10 @@
 .chatList{
   display: flex;
   flex-direction: column;
-  width: 30vw;
-  height: 70%;
+  height: 100%;
   border-right:1px solid gray ;
+  
+  .container{
+    cursor: pointer;
+  }
 }
