--- a/chat-front/src/components/chat/chatFind/ChatFind.module.scss
+++ b/chat-front/src/components/chat/chatFind/ChatFind.module.scss
@@ -10,10 +10,25 @@
         display: flex;
         justify-content: space-between;
         margin-top: 10px;
+        img{
+            width: 40px;
+            height: 40px;
+        }
     }
-    input{
-        border-radius: 20px;
-        width: 90%;
-        margin-bottom: 10px;
+    .roomActions{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        input{
+            border-radius: 20px;
+            width: 60%;
+            margin-bottom: 10px;
+        }
+
+        .createRoom{
+            font-size: 12px;
+            padding: 2px;
+        }
     }
+
 }
