--- a/chat-front/src/components/chat/chatWindow/chatWindowNav/chatNav.module.scss
+++ b/chat-front/src/components/chat/chatWindow/chatWindowNav/chatNav.module.scss
@@ -1,6 +1,42 @@
 .chatNav{
-    height: 20%;
     display: flex;
+    align-items: center;
     justify-content: space-between;
     border-bottom:1px solid gray ;
+    h2{
+        margin-left: 30px;
+    }
+    .menuContainer{
+        margin-right: 30px;
+        position: relative;
+        display: inline-block;
+        cursor: pointer;
+        .icon{
+            width: 30px;
+            height: 30px;
+        }
+
+        .dropdownMenu {
+            position: absolute;
+            top: 100%;
+            right: 1px;
+            background-color: white;
+            box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+            z-index: 1;
+
+            ul{
+                list-style-type: none;
+                margin: 0;
+                padding: 0;
+
+                li{
+                    padding: 8px 16px;
+                    cursor: pointer;
+                }
+                li:hover{
+                    background-color: #ddd;
+                }
+            }
+          }
+    }
 }
