fixed chat logic, added error handling, rabbitmq types for messages

--- a/chat-front/src/components/chat/chatWindow/ChatMessage/chatMessage.module.scss
+++ b/chat-front/src/components/chat/chatWindow/ChatMessage/chatMessage.module.scss
@@ -31,7 +31,7 @@
   }
   
   .theirs .messageText {
-    background-color: #fff; // Цвет фона для чужих сообщений
+    background-color: #c3c0ed; // Цвет фона для чужих сообщений
   }
   
   
