--- a/chat-front/src/components/chat/chatWindow/ChatMessage/chatMessage.module.scss
+++ b/chat-front/src/components/chat/chatWindow/ChatMessage/chatMessage.module.scss
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     margin: 10px;
-
+    cursor: pointer;
+    user-select: none;
 
       .messageText {
         max-width: 60%;
