--- a/chat-front/src/components/chat/chatWindow/chatCanvas.module.scss
+++ b/chat-front/src/components/chat/chatWindow/chatCanvas.module.scss
@@ -1,5 +1,6 @@
 .chat{
-    background-color: #FFFF;
+    background-color: #FFFFFF;
+    border-radius: 25;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -7,13 +8,13 @@
     .messages {
         flex: 1;
         overflow-y: auto;
-        padding: 10px; // Optional: for some padding around messages
+        padding: 10px;
       }
     
       .messageInput {
         display: flex;
         padding: 10px;
-        border-top: 1px solid #ccc; // Optional: for a border at the top of the input area
+        border-top: 1px solid #ccc;
         
         .input{
           height: 30px;
