--- a/chat-front/src/index.css
+++ b/chat-front/src/index.css
@@ -22,8 +22,11 @@ a {
 a:hover {
   color: #535bf2;
 }
-
+html{
+  height: 100%;
+}
 body {
+  height: 100%;
   margin: 0;
   place-items: center;
   min-width: 320px;
